test_cases/bad/undefined_type2.lat
foo f() {
    return null;
}

int main() {
    f();
    return 0;
}

